# tapps-brain

./: .cursorignore  .env.example  .envrc  .gitattributes  .gitignore  .mcp.json  .ralphrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP-PLAN.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TECH_STACK.md  docker-compose.yml  fix_plan.md  llms-full.txt  llms.txt  package-lock.json  package.json  pyproject.toml  ralph-feedback-report.md  run-ralph-test.sh  server.json
.claude/: mcp.json  settings.json
.claude/agents/: ralph-architect.md  ralph-bg-tester.md  ralph-coordinator.md  ralph-explorer.md  ralph-reviewer.md  ralph-tester.md  ralph.md  tapps-researcher.md  tapps-review-fixer.md  tapps-reviewer.md  tapps-validator.md
.claude/hooks/: tapps-brain-session-start.sh  tapps-memory-auto-capture.sh  tapps-memory-capture.sh  tapps-post-docs-validate.sh  tapps-post-edit.sh  tapps-post-linear-list.sh  tapps-post-linear-snapshot-get.sh  tapps-post-report.sh  tapps-post-validate.sh  tapps-pre-bash.sh  tapps-pre-compact.sh  tapps-pre-linear-list.sh  tapps-pre-linear-write.sh  tapps-session-compact.sh  tapps-session-start.sh  tapps-stop.sh  tapps-subagent-start.sh  tapps-subagent-stop.sh  tapps-task-completed.sh  tapps-user-prompt-submit.sh
.claude/rules/: agent-scope.md  autonomy.md  config-files.md  integration-hygiene.md  linear-standards.md  python-quality.md  security.md  tapps-pipeline.md  test-quality.md
.cursor/: BUGBOT.md  hooks.json  mcp.json
.cursor/agents/: tapps-researcher.md  tapps-review-fixer.md  tapps-reviewer.md  tapps-validator.md
.cursor/hooks/: tapps-after-edit.sh  tapps-before-mcp.sh
.cursor/rules/: project.mdc  tapps-agent-scope.mdc  tapps-expert-consultation.mdc  tapps-pipeline.md  tapps-pipeline.mdc  tapps-python-quality.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  task.yml
.github/agents/: tapps-quality.md  tapps-researcher.md
.github/instructions/: quality.instructions.md  security.instructions.md  testing.instructions.md
.github/scripts/: setup-rulesets.ps1  setup-rulesets.sh
.github/workflows/: agentic-pr-review.yml  ci.yml  codeql-analysis.yml  copilot-setup-steps.yml  dependabot-auto-merge.yml  epic-validation.yml  hive-smoke.yml  publish.yml  release.yml  tapps-quality-reusable.yml  tapps-quality.yml  ts-sdk.yml
.playwright-mcp/: page-2026-04-14T15-54-55-354Z.yml
.ralph/: .circuit_breaker_events  .invocation_latencies  .update_failures  AGENT.md  PROMPT.md  STOP  fix_plan.md  fix_plan.md.bak  fix_plan.md.bak-epic066-done  fix_plan.md.bak2  fix_plan_archive.md  ralph-recommendations.md
.ralph/bugs/: WSL-WINDOWS-VERSION-DIVERGENCE.md
.ralph/hooks/: on-bash-command.sh  on-file-change.sh  on-linear-tool.sh  on-session-start.sh  on-stop-failure.sh  on-stop.sh  on-subagent-done.sh  on-task-completed.sh  on-teammate-idle.sh  platform_detect.sh  protect-ralph-files.sh  validate-command.sh
.ralph/specs/: EPIC-006.md  EPIC-009.md
config/: mcp_profiles.yaml
docker/: .env.example  Dockerfile.http  Dockerfile.migrate  Dockerfile.visual  README.md  docker-compose.hive.yaml  init-hive.sql  migrate-entrypoint.sh  nginx-visual-tls.conf  nginx-visual.conf  visual-entrypoint.sh
docs/: DOCUMENTATION_INDEX.md  GITHUB_SETUP_GUIDE.md  INDEX.md  RALPH_SETUP_GUIDE.md  api-reference.md  architecture.html  index.md  ralph-jsonl-crash-bug.md
docs/benchmarks/: README.md  locomo.md  longmemeval.md
docs/case-studies/: README.md  TEMPLATE.md
docs/contracts/: openapi-3.10.0.json  openapi-3.10.2.json  openapi-3.10.3.json  openapi-3.12.0.json  openapi-3.13.0.json  openapi-3.14.0.json  openapi-3.14.1.json  openapi-3.14.2.json  openapi-3.14.3.json  openapi-3.14.4.json  openapi-3.14.5.json  openapi-3.7.2.json  openapi-3.8.0.json  openapi-3.9.0.json  openapi.json
docs/diagrams/: dependency.mmd  module-map.mmd
docs/engineering/: README.md  architecture-report.html  async-performance.md  call-flows.md  code-inventory-and-doc-gaps.md  data-stores-and-schema.md  experience-events.md  features-and-technologies.md  optional-features-matrix.md  system-architecture.md  threat-model.md  v3-behavioral-parity.md
docs/epics/: EPIC-070-agentforge-integration.md
docs/guides/: agent-integration.md  agent-md-wiring.md  agentforge-integration.md  auto-recall.md  claude-code-hooks.md  clawhub-submission.md  client.md  decay.md  deployment.md  doc-validation-lookup-engine.md  embedding-model-card.md  errors.md  federation.md  fleet-topology.md  getting-started.md  hive-deployment.md  hive-operations.md  hive-tls.md  hive-vs-federation.md  hive.md  http-adapter.md  http-api.openapi.yaml  idempotency.md  langgraph-adapter.md  linear-claude-agent.md  llm-brain-guide.md  mcp-client-repo-setup.md  mcp-tools-for-agents.md  mcp.md  memory-decay-and-fsrs.md  memory-relay.md  memory-scopes.md  migration-3.5-to-3.6.md  migration-3.6-to-3.7.md  observability.md  openclaw-install-from-git.md  openclaw-runbook.md  openclaw.md  postgres-backup.md  postgres-dsn.md  (+14 more)
docs/operations/: db-roles-runbook.md  epic-validation-regression.md  k8s-probes.md  observability-runbook.md  postgres-backup-runbook.md  telemetry-policy.md
docs/planning/: STATUS.md  (+14 more)
examples/: agentforge-client.py
openclaw-plugin/: README.md  UPGRADING.md  openclaw.plugin.json  package-lock.json  package.json  plugin.json  tsconfig.json
openclaw-skill/: README.md  SKILL.md  openclaw.plugin.json
scripts/: Invoke-RalphWsl.ps1  Start-RalphWsl.ps1  apply_all_migrations.py  bench_rls_overhead.py  brain-healthcheck.sh  check_openclaw_docs_consistency.py  complete-ralph-deps.sh  generate_mcp_tool_manifest.py  hive_smoke.sh  load_smoke.py  publish-checklist.md  release-ready.sh  run_benchmark.py  run_doc_validation.py  run_eval_golden.py  snapshot_openapi.py  validate_epics.py  wsl-find-anthropic-env.sh  wsl-fix-ralph-crlf.sh  wsl-run-ralph-bg.sh  wsl-upgrade-claude-code.sh  wsl-verify-ralph.sh
tests/: conftest.py  diagnostics_dimensions.py  factories.py  test_http_mcp_parity.py
(+592 files in other folders)
