[build-system]
requires = ["hatchling>=1.28,<2"]
build-backend = "hatchling.build"

[project]
name = "tapps-brain"
version = "3.3.0"
description = "Persistent cross-session memory system for AI coding assistants"
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "TappsMCP Contributors" },
]
keywords = ["memory", "ai", "coding-assistant", "bm25", "knowledge-store", "sqlite"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    # Pin <3 — Pydantic v3 may change serialization; bump after compat review
    "pydantic>=2.12.5,<3",
    "structlog>=25.5.0,<26",
    "pyyaml>=6.0.3,<7",
    # Vector semantic search — sqlite-vec is the default ANN index.
    "numpy>=2.4.2,<3",
    "sentence-transformers>=5.2.3,<6",
    "sqlite-vec>=0.1.9,<0.2",
    # OTel API is a no-op by default; users install opentelemetry-sdk for actual export.
    "opentelemetry-api>=1.20,<2",
]

[project.urls]
Homepage = "https://github.com/wtthornton/tapps-brain"
Repository = "https://github.com/wtthornton/tapps-brain"
Documentation = "https://github.com/wtthornton/tapps-brain/tree/main/docs"
Changelog = "https://github.com/wtthornton/tapps-brain/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/wtthornton/tapps-brain/issues"

[project.scripts]
tapps-brain = "tapps_brain.cli:app"
tapps-brain-mcp = "tapps_brain.mcp_server:main"

[project.optional-dependencies]
cli = [
    "typer>=0.15.0,<1",
]
mcp = [
    "mcp>=1.25.0,<2",
]
reranker = [
    "flashrank>=0.2.9,<0.3",
]
encryption = [
    "pysqlcipher3>=1.2.0,<2",
]
otel = [
    "opentelemetry-sdk>=1.20,<2",
]
visual = [
    "playwright>=1.45,<2",
]
all = [
    "tapps-brain[cli,mcp,reranker]",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6.0,<7",
    "pytest-benchmark>=5.0,<6",
    "mypy>=1.14,<2",
    "ruff>=0.9,<1",
    "mcp>=1.25.0,<2",
    "typer>=0.15.0,<1",
]

[tool.hatch.build.targets.sdist]
include = ["src/tapps_brain/"]

[tool.hatch.build.targets.wheel]
packages = ["src/tapps_brain"]
artifacts = ["src/tapps_brain/profiles/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "benchmark: performance benchmarks (deselect with '-m not benchmark')",
    "requires_cli: tests requiring the [cli] extra (typer)",
    "requires_mcp: tests requiring the [mcp] extra (mcp SDK)",
    "requires_encryption: tests requiring SQLCipher (pysqlcipher3 + optional system lib)",
]
filterwarnings = [
    "error::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "numpy",
    "numpy.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "sqlite_vec",
    "sqlite_vec.*",
    "flashrank",
    "flashrank.*",
    "yaml",
    "mcp",
    "mcp.*",
    "opentelemetry",
    "opentelemetry.*",
    "playwright",
    "playwright.*",
    "pysqlcipher3",
    "pysqlcipher3.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "PLR",  # pylint refactor
]
ignore = [
    "PLR0913", # too many arguments (inherent to dispatch functions)
    "PLR0912", # too many branches
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "PLR", "TCH", "E402", "F841", "E741", "RUF002"]
"src/tapps_brain/_protocols.py" = ["ANN401"]
"src/tapps_brain/aio.py" = ["ANN401"]
"src/tapps_brain/diagnostics.py" = ["RUF001", "RUF002", "TC003", "PLR2004", "SIM108", "SIM105"]
"src/tapps_brain/evaluation.py" = ["RUF002", "TC003", "N818", "PLR2004", "E501"]
"src/tapps_brain/flywheel.py" = ["TC001", "N815", "N814", "ANN401", "SIM108", "SIM102", "PLR2004"]
"src/tapps_brain/store.py" = ["PLR0915", "PLR2004", "N806"]
