[build-system]
requires = ["hatchling>=1.28,<2"]
build-backend = "hatchling.build"

[project]
name = "tapps-brain"
version = "3.9.0"
description = "Persistent cross-session memory system for AI coding assistants"
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "TappsMCP Contributors" },
]
keywords = ["memory", "ai", "coding-assistant", "bm25", "knowledge-store", "postgres", "pgvector"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    # Pin <3 — Pydantic v3 may change serialization; bump after compat review
    "pydantic>=2.12.5,<3",
    "structlog>=25.5.0,<26",
    "pyyaml>=6.0.3,<7",
    # Vector semantic search — pgvector HNSW is the ANN index (see migrations/private).
    "numpy>=2.4.2,<3",
    "sentence-transformers>=5.2.3,<6",
    # Postgres driver for private memory / hive / federation (EPIC-059).
    "psycopg[binary,pool]>=3.2,<4",
    # OTel API is a no-op by default; users install opentelemetry-sdk for actual export.
    "opentelemetry-api>=1.20,<2",
]

[project.urls]
Homepage = "https://github.com/wtthornton/tapps-brain"
Repository = "https://github.com/wtthornton/tapps-brain"
Documentation = "https://github.com/wtthornton/tapps-brain/tree/main/docs"
Changelog = "https://github.com/wtthornton/tapps-brain/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/wtthornton/tapps-brain/issues"

[project.scripts]
tapps-brain = "tapps_brain.cli:app"
tapps-brain-http = "tapps_brain.http_adapter:main"

[project.optional-dependencies]
cli = [
    "typer>=0.15.0,<1",
]
mcp = [
    "mcp>=1.25.0,<2",
]
http = [
    "mcp>=1.25.0,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "starlette>=0.40,<1",
    # STORY-070.8: argon2id hashing for per-tenant bearer tokens
    "argon2-cffi>=23.1.0,<25",
]
reranker = [
    "flashrank>=0.2.9,<0.3",
]
otel = [
    "opentelemetry-sdk>=1.20,<2",
]
visual = [
    "playwright>=1.45,<2",
]
# STORY-070.11: TappsBrainClient network transport
client = [
    "httpx>=0.27,<1",
]
all = [
    "tapps-brain[cli,mcp,http,reranker,client]",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6.0,<7",
    "pytest-benchmark>=5.0,<6",
    "mypy>=1.14,<2",
    "ruff>=0.9,<1",
    "mcp>=1.25.0,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "starlette>=0.40,<1",
    "httpx>=0.27,<1",
    "typer>=0.15.0,<1",
]

[tool.hatch.build.targets.sdist]
include = ["src/tapps_brain/", "examples/coding-project-init/"]

[tool.hatch.build.targets.wheel]
packages = ["src/tapps_brain"]
artifacts = ["src/tapps_brain/profiles/*.yaml", "src/tapps_brain/mcp_server/*.yaml"]

# Ship the coding-project-init scaffold as package data so `tapps-brain init`
# works from an installed wheel (examples/ lives outside the wheel normally).
[tool.hatch.build.targets.wheel.force-include]
"examples/coding-project-init" = "tapps_brain/_scaffolds/coding-project-init"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "benchmark: performance benchmarks (deselect with '-m not benchmark')",
    "requires_cli: tests requiring the [cli] extra (typer)",
    "requires_mcp: tests requiring the [mcp] extra (mcp SDK)",
    "requires_postgres: tests requiring a live PostgreSQL instance (set TAPPS_BRAIN_DATABASE_URL)",
]
filterwarnings = [
    "error::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

# TappsBrainClient dispatches over HTTP responses which are inherently Any-typed.
# warn_return_any would require casts at every return site — not worth the noise.
[[tool.mypy.overrides]]
module = ["tapps_brain.client"]
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "numpy",
    "numpy.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "flashrank",
    "flashrank.*",
    "yaml",
    "mcp",
    "mcp.*",
    "opentelemetry",
    "opentelemetry.*",
    "playwright",
    "playwright.*",
    "psycopg",
    "psycopg.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "PLR",  # pylint refactor
]
ignore = [
    "PLR0913", # too many arguments (inherent to dispatch functions)
    "PLR0912", # too many branches
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN", "PLR", "TCH", "E402", "F841", "E741", "RUF002",
    # Style rules that are fine in test code
    "E501",   # long lines acceptable in test assertions / fixture data
    "SIM",    # simplify style — clarity beats brevity in tests
    "B904",   # raise-without-from — test helpers re-raise deliberately
    "B017",   # assert-raises-exception — used for broad smoke tests
    "B905",   # zip-without-strict — test data is always matched
    "RUF001", "RUF003",  # ambiguous unicode chars in test strings/comments
    "N806", "N814",      # naming conventions relaxed in tests
    "RUF012",            # mutable class defaults fine in test fixtures
    "F821",              # forward-ref return annotations in lazy-import helpers
]
"src/tapps_brain/_protocols.py" = ["ANN401"]
"src/tapps_brain/aio.py" = ["ANN401"]
"src/tapps_brain/client.py" = ["ANN401"]
"src/tapps_brain/diagnostics.py" = ["RUF001", "RUF002", "TC003", "PLR2004", "SIM108", "SIM105"]
"src/tapps_brain/evaluation.py" = ["RUF002", "TC003", "N818", "PLR2004", "E501"]
"src/tapps_brain/flywheel.py" = ["TC001", "N815", "N814", "ANN401", "SIM108", "SIM102", "PLR2004"]
"src/tapps_brain/store.py" = ["PLR0915", "PLR2004", "N806"]
# Service layer uses Any extensively for generic JSON/dict dispatch — intentional
"src/tapps_brain/services/*.py" = ["ANN401"]
"src/tapps_brain/mcp_server/__init__.py" = [
    "ANN401", "PLR0911", "N806",
    "E402",   # conditional imports after module-level contextvars setup
]
"src/tapps_brain/mcp_server/tool_filter.py" = [
    "ANN401",  # mcp: Any and **kwargs: Any — FastMCP is optional dep, typed as Any intentionally
    "TC003",   # contextvars used in runtime annotation (ContextVar.get() called at request time)
]
"src/tapps_brain/http_adapter.py" = [
    "ANN401",
    "B904",     # HTTP adapters re-raise as HTTPException deliberately
    "PLR0915",  # large dispatch function — refactor is out of scope here
    "RUF003",   # × char in comments is intentional (cross-product notation)
    "PLR2004",  # 65_536 byte limit is self-documenting; constant adds no clarity
    "SIM108",   # status_code ternary is less readable than if/else here
    "E501",     # inline OpenAPI spec dict literals and docstrings exceed 100 chars
]
"src/tapps_brain/visual_snapshot.py" = ["PLR0915"]  # large snapshot fn; refactor tracked separately
"src/tapps_brain/retrieval.py" = ["PLR2004"]  # 384-dim embedding size is domain knowledge
"src/tapps_brain/postgres_private.py" = ["ANN401"]
"src/tapps_brain/auto_consolidation.py" = ["ANN401"]
"src/tapps_brain/cli.py" = ["B904", "B008"]  # typer.Option() in defaults is idiomatic typer
